--- a/public/css/test.css
+++ b/public/css/test.css
@@ -23,3 +23,16 @@ h2{
   width: 30%;
   border: 1px solid black;
 }
+.new_box{
+  width: 200px;
+  height: 100px;
+  border: black solid 1px;
+  list-style: none;
+  margin-bottom: 10px;
+}
+
+.heart{
+  display: block;
+  width: 30px;
+  height: 30px;
+}
