--- a/public/assets/css/contents.css
+++ b/public/assets/css/contents.css
@@ -6,6 +6,11 @@
     grid-template: 
         "left   left   left   left   right"
         "left   left   left   left   right"
+        "footer footer footer footer right"
+        "footer footer footer footer right"
+        "footer footer footer footer right"
+        "footer footer footer footer right"
+        "footer footer footer footer right"
         "footer footer footer footer right";
 }
 
@@ -13,12 +18,50 @@
     grid-area: left;
 }
 
-.contents_aside{
-    grid-area: right;    
-    /* width: 100%; */
+#pdf_wrapper{
+    text-align: center;
 }
 
-img {
+#shere_btn{
+    font-size: 0.5em;
+    font-weight: bold;
+    padding: 10px 30px;
+    background-color: #2792c3;
+    color: #fff;
+    border-style: solid;
+    box-shadow: 2px 2px 3px 1px #666;
+    -moz-box-shadow: 2px 2px 3px 1px #666;
+    -webkit-box-shadow: 2px 2px 3px 1px #666;
+}
+
+#shere_btn:hover{
+    background-color:  #34ade6;
+    color: #fff;
+}
+
+#like_btn{
+    font-size: 0.5em;
+    font-weight: bold;
+    padding: 10px 30px;
+    background-color: #2792c3;
+    color: #fff;
+    border-style: solid;
+    box-shadow: 2px 2px 3px 1px #666;
+    -moz-box-shadow: 2px 2px 3px 1px #666;
+    -webkit-box-shadow: 2px 2px 3px 1px #666;
+}
+
+#like_btn:hover{
+    background-color:  #34ade6;
+    color: #fff;
+}
+
+.contents_aside{
+    grid-area: right;    
+    padding-right: 20px;
+}
+
+.content-img img {
     width: 6.0em;
     min-height: 100px;
 }
