--- a/public/assets/css/top.css
+++ b/public/assets/css/top.css
@@ -7,6 +7,7 @@
     align-items: center;
 }
 
+
 .first_view
  h1{
     line-height: 160px;
@@ -26,6 +27,7 @@
     font-weight: bold;
     padding-top: 20px;
     padding-bottom: 20px;
+    margin-top: 30px;
 }
 
 .hot_next{
@@ -85,6 +87,24 @@
 .card_top_wrapper{
     display: flex;
 }
+
+.search_wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    position: relative;
+    width: 90%;
+}
+
+.search_card {
+    width: 29%;
+    cursor: pointer;
+    border: 0.5px solid #e9eaea;
+    border-radius: 3px;
+    transition: 0.3s;
+    margin: 1% 1% 4% 3%;
+}
+
 
 
 .card_top {
