--- a/public/assets/css/contents.css
+++ b/public/assets/css/contents.css
@@ -28,6 +28,12 @@
     justify-content: center;
 }
 
+#pdf_file{
+    width: 500px;
+    height: 730px;
+
+}
+
 .contents_name{
     font-size: 0.8em;
     padding-bottom: 20px;
@@ -38,10 +44,13 @@
 }
 
 #btn_wrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     padding-top: 20px;
+    padding-top: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 500px;
+    display: flex;
+    align-items: center;
 }
 
 #shere_btn{
@@ -132,8 +141,8 @@
     grid-area: footer;
 }
 
-.comment_wrapper{
-    text-align: center;
+/* .comment_wrapper{
+    padding-left: 20px;
 }
 
 .comment_name{
@@ -143,6 +152,7 @@
 #comment_area{
     border: solid 1px;
     font-size: 15px;
+    resize: none;
 }
 
 #comment_send{
@@ -155,6 +165,81 @@
     box-shadow: 2px 2px 3px 1px #666;
     -moz-box-shadow: 2px 2px 3px 1px #666;
     -webkit-box-shadow: 2px 2px 3px 1px #666;  
+}
+
+#comment_send:hover{
+    background-color:  #34ade6;
+    color: #fff;
+} */
+
+
+
+.comment_wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    padding: 30px 20px;
+    max-width: 640px;
+    font-size: 0.5em;
+}
+
+.toukou_name{
+    padding-bottom: 10px;
+    padding-left: 10px;
+}
+  
+.FlexTextarea {
+    position: relative;
+    font-size: 1rem;
+    line-height: 1.8;
+}
+
+.FlexTextarea__dummy {
+    overflow: hidden;
+    visibility: hidden;
+    box-sizing: border-box;
+    padding: 5px 15px;
+    min-height: 120px;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    border: 1px solid;
+}
+
+.FlexTextarea__textarea {
+    position: absolute;
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
+    padding: 5px 15px;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: 1px solid #b6c3c6;
+    border-radius: 4px;
+    color: inherit;
+    font: inherit;
+    letter-spacing: inherit;
+    resize: none;
+}
+
+.FlexTextarea__textarea:focus {
+    box-shadow: 0 0 0 4px#34ade6;
+    outline: 0;
+}
+
+#comment_send{
+    font-size: 0.5em;
+    font-weight: bold;
+    padding: 8px 10px;
+    margin-top: 5px;
+    margin-right: 5px;
+    float: right;
+    background-color: #2792c3;
+    color: #fff;
+    border-style: solid;
+    /* box-shadow: 2px 2px 3px 1px #666;
+    -moz-box-shadow: 2px 2px 3px 1px #666;
+    -webkit-box-shadow: 2px 2px 3px 1px #666;   */
 }
 
 #comment_send:hover{
