--- a/public/assets/css/hp.css
+++ b/public/assets/css/hp.css
@@ -18,7 +18,7 @@ header{
     display: flex;
     justify-content: space-between;
     height: 70px;
-    background-color: darkgray;
+    background-color: #adadad;
     position: relative;
 }
 
@@ -36,7 +36,7 @@ img#logo {
     height: 2.3em;
     width: 250px;
     overflow: hidden;
-    background: darkgray;
+    background:#adadad;
     margin-left: 10px;
 }
 
@@ -69,7 +69,7 @@ img#logo {
     font-size: 1.3em;
     border: none;
     background: none;
-    color: #2792c3;
+    color: #adadad;
     position: absolute;
     width: 1.5em;
     height: 2.5em;
@@ -117,7 +117,7 @@ img#logo {
     position: absolute;
     right: 0;
     top: 70px;
-    background: darkgray;
+    background: #adadad;
     border: solid 0.5px;
     z-index: 1;
 }
@@ -150,5 +150,5 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: darkgray;
+    background-color:  #adadad;
 }
