--- a/public/assets/css/upload.css
+++ b/public/assets/css/upload.css
@@ -1,8 +1,8 @@
 .upload-file-list {
-  padding: 0 60px;
+  padding: 50px 60px;
   max-width: 940px;
-  margin: 0 auto;
-}
+  margin: 0px auto;
+} 
 
 .upload-file-list .fileList {
   margin-left: 0;
@@ -13,8 +13,9 @@
 .fileItem {
   list-style: none;
   background-color: #fff;
-  border: 1px solid #D0D0D0;
-}
+  border: 2px solid darkturquoise;
+  background-color: gainsboro;
+} 
 
 .row {
   display: flex;
@@ -27,14 +28,15 @@
 }
 
 .fileItem .header-container{
-  border-bottom: 1px solid #D0D0D0;
-  padding: 10px 32px;
-  color: #676767;
-  font-weight: 300;
-  font-size: 20px;
-  justify-content: space-between;
-
+    border-bottom: 2px solid darkturquoise;
+    padding: 10px 32px;
+    color: #676767;
+    /* font-weight: 300; */
+    font-size: 20px;
+    justify-content: space-between;
+    background-color: gainsboro;
 }
+
 
 .has-tip {
   border-bottom: none;
@@ -47,9 +49,12 @@
 }
 
 .fileItem .bottom-container {
-  padding: 15px 15px 0;
+  padding: 30px 0px 25px 15px;
   display: flex;
+  margin: 0px 0px 0px 0;
 }
+
+
 .fileItem .bottom-container .embed-container {
   padding: 7px 13px;
   width: 50%;
@@ -61,12 +66,14 @@
   box-shadow: 0 0 1px;
   height: 240px;
   position: relative;
+  background-color: gainsboro;
+  width: 100%;
 }
 
 .fileItem .bottom-container .embed-container .iframe-wrapper .overlay .iframe-msg {
   height: 30px;
   position: absolute;
-  top: calc(65% - 15px);
+  top: calc(50% - 15px);
   width: 100%;
 }
 
@@ -79,7 +86,7 @@
 }
 
 .large-7 {
-    width: 58.33333%;
+    width: 23rem;
 }
 
 .fileItem .bottom-container .details-container .row {
@@ -87,7 +94,7 @@
 }
 
 .fileItem label {
-  color: #717171;
+  color: #2d2d2d;
   font-weight: 300;
   font-size: 15px;
   margin-bottom: 0;
@@ -101,12 +108,15 @@ select.radius {
 }
 .fileItem .bottom-container .details-container select {
   height: 35px;
-  padding-left: 11px;
+  padding-right: 16px;
+  padding-left: 16px;
   padding-top: 5px;
   padding-bottom: 5px;
   font-size: 15px;
   background-color: transparent;
   margin-bottom: 0;
+  border: 1px solid;
+  background-color: ghostwhite;
 }
 
 .publish-buttongroup .public_publish_notice {
@@ -145,20 +155,59 @@ select.radius {
 .make_file_btn {
   display: block;
   position: relative;
+  padding-left: 85%;
+  margin: 0 15px -41px 15px;
 }
 
 .make_introduce{
   width: 80%;
 }
 
-.make_file_btn button{
+.make_file_btn button {
   background-color: #e98325;
   border-color: #c46814;
-  color: #fff;
+  color: #ffffff;
+  text-align: center;
   width: 108px;
   font-size: 17px;
   font-weight: 200;
   padding: 3px 0 3px 0;
   border-radius: 3px;
   border: solid 1px white;
+}
+
+
+input[type="button"] {
+  /* background-color: orange; */
+  background-color: darkslategray;
+  border-color: #c46814;
+  color: #ffffff;
+  width: 108px;
+  font-size: 17px;
+  font-weight: 200;
+  padding: 3px 0 3px 0;
+  border-radius: 3px;
+  border: solid 1px white;
+}
+
+
+.u_text {
+  border: 1px solid;
+  width: -webkit-fill-available;
+  font-size: 15px;
+  line-height: 25px;
+  background-color:ghostwhite;
+}
+
+.row.bottom-container {
+  background-color: dodgerblue;
+}
+
+.up_message {
+  background-color: yellow;
+}
+
+
+.up_logo img{
+  width: 40%;
 }
